// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Anchor blur renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
  class="c0"
>
  <a
    class="c1"
    href="#"
  >
    Test
  </a>
</div>
`;

exports[`Anchor disabled renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  opacity: 0.3;
  cursor: default;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div>
  <div
    class="c0"
  >
    <a
      class="c1"
      disabled=""
    />
  </div>
</div>
`;

exports[`Anchor focus renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1 > circle,
.c1 > ellipse,
.c1 > line,
.c1 > path,
.c1 > polygon,
.c1 > polyline,
.c1 > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c1::-moz-focus-inner {
  border: 0;
}

<div
  class="c0"
>
  <a
    class="c1"
    href="#"
  >
    Test
  </a>
</div>
`;

exports[`Anchor gap renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c3 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  width: 6px;
}

.c4 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  width: 12px;
}

.c5 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  width: 24px;
}

.c6 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  width: 48px;
}

.c7 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  width: 5px;
}

.c1 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div>
  <div
    class="c0"
  >
    <a
      class="c1"
      href="#"
    >
      <span
        class="c2"
        style="display: inline-flex;"
      >
        <svg
          color="#7D4CDB"
        />
        <span
          class="c3"
        />
        Theme Gap
      </span>
    </a>
    <a
      class="c1"
      href="#"
    >
      <span
        class="c2"
        style="display: inline-flex;"
      >
        <svg
          color="#7D4CDB"
        />
        <span
          class="c4"
        />
        Small Gap
      </span>
    </a>
    <a
      class="c1"
      href="#"
    >
      <span
        class="c2"
        style="display: inline-flex;"
      >
        <svg
          color="#7D4CDB"
        />
        <span
          class="c5"
        />
        Medium Gap
      </span>
    </a>
    <a
      class="c1"
      href="#"
    >
      <span
        class="c2"
        style="display: inline-flex;"
      >
        <svg
          color="#7D4CDB"
        />
        <span
          class="c6"
        />
        Large Gap
      </span>
    </a>
    <a
      class="c1"
      href="#"
    >
      <span
        class="c2"
        style="display: inline-flex;"
      >
        <svg
          color="#7D4CDB"
        />
        <span
          class="c7"
        />
        5px Gap
      </span>
    </a>
  </div>
</div>
`;

exports[`Anchor icon label renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c3 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  width: 12px;
}

.c1 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div>
  <div
    class="c0"
  >
    <a
      class="c1"
    >
      <span
        class="c2"
        style="display: inline-flex;"
      >
        <svg
          color="#7D4CDB"
        />
        <span
          class="c3"
        />
        Test
      </span>
    </a>
  </div>
</div>
`;

exports[`Anchor is clickable 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
  class="c0"
>
  <a
    class="c1"
    href="#"
  >
    Test
  </a>
</div>
`;

exports[`Anchor matches icon size to size prop when theme.icon.matchSize is true 1`] = `
<DocumentFragment>
  .c3 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: NaNpx;
  height: NaNpx;
  fill: #7D4CDB;
  stroke: #7D4CDB;
}

.c3 g {
  fill: inherit;
  stroke: inherit;
}

.c3 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c3 *[stroke*="#"],
.c3 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c3 *[fill-rule],
.c3 *[FILL-RULE],
.c3 *[fill*="#"],
.c3 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c6 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 12px;
  height: 12px;
  fill: #7D4CDB;
  stroke: #7D4CDB;
}

.c6 g {
  fill: inherit;
  stroke: inherit;
}

.c6 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c6 *[stroke*="#"],
.c6 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c6 *[fill-rule],
.c6 *[FILL-RULE],
.c6 *[fill*="#"],
.c6 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c8 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #7D4CDB;
  stroke: #7D4CDB;
}

.c8 g {
  fill: inherit;
  stroke: inherit;
}

.c8 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c8 *[stroke*="#"],
.c8 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c8 *[fill-rule],
.c8 *[FILL-RULE],
.c8 *[fill*="#"],
.c8 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c10 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 48px;
  height: 48px;
  fill: #7D4CDB;
  stroke: #7D4CDB;
}

.c10 g {
  fill: inherit;
  stroke: inherit;
}

.c10 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c10 *[stroke*="#"],
.c10 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c10 *[fill-rule],
.c10 *[FILL-RULE],
.c10 *[fill*="#"],
.c10 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c12 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 96px;
  height: 96px;
  fill: #7D4CDB;
  stroke: #7D4CDB;
}

.c12 g {
  fill: inherit;
  stroke: inherit;
}

.c12 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c12 *[stroke*="#"],
.c12 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c12 *[fill-rule],
.c12 *[FILL-RULE],
.c12 *[fill*="#"],
.c12 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c4 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  width: 12px;
}

.c1 {
  box-sizing: border-box;
  font-size: 12px;
  line-height: 18px;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c5 {
  box-sizing: border-box;
  font-size: 14px;
  line-height: 20px;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c5:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c7 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c7:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c9 {
  box-sizing: border-box;
  font-size: 22px;
  line-height: 28px;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c9:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c11 {
  box-sizing: border-box;
  font-size: 26px;
  line-height: 32px;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c11:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
    class="c0"
  >
    <a
      class="c1"
    >
      <span
        class="c2"
        style="display: inline-flex;"
      >
        <svg
          aria-label="LinkNext"
          class="c3"
          viewBox="0 0 24 24"
        >
          <path
            d="M2 12h20m-9-9 9 9-9 9"
            fill="none"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
        <span
          class="c4"
        />
        Label
      </span>
    </a>
    <a
      class="c5"
    >
      <span
        class="c2"
        style="display: inline-flex;"
      >
        <svg
          aria-label="LinkNext"
          class="c6"
          viewBox="0 0 24 24"
        >
          <path
            d="M2 12h20m-9-9 9 9-9 9"
            fill="none"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
        <span
          class="c4"
        />
        Label
      </span>
    </a>
    <a
      class="c7"
    >
      <span
        class="c2"
        style="display: inline-flex;"
      >
        <svg
          aria-label="LinkNext"
          class="c8"
          viewBox="0 0 24 24"
        >
          <path
            d="M2 12h20m-9-9 9 9-9 9"
            fill="none"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
        <span
          class="c4"
        />
        Label
      </span>
    </a>
    <a
      class="c9"
    >
      <span
        class="c2"
        style="display: inline-flex;"
      >
        <svg
          aria-label="LinkNext"
          class="c10"
          viewBox="0 0 24 24"
        >
          <path
            d="M2 12h20m-9-9 9 9-9 9"
            fill="none"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
        <span
          class="c4"
        />
        Label
      </span>
    </a>
    <a
      class="c11"
    >
      <span
        class="c2"
        style="display: inline-flex;"
      >
        <svg
          aria-label="LinkNext"
          class="c12"
          viewBox="0 0 24 24"
        >
          <path
            d="M2 12h20m-9-9 9 9-9 9"
            fill="none"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
        <span
          class="c4"
        />
        Label
      </span>
    </a>
  </div>
</DocumentFragment>
`;

exports[`Anchor renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div>
  <div
    class="c0"
  >
    <a
      class="c1"
    />
  </div>
</div>
`;

exports[`Anchor renders a11yTitle and aria-label 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div>
  <div
    class="c0"
  >
    <a
      aria-label="test"
      class="c1"
      href="#"
    >
      Test
    </a>
    <a
      aria-label="test-2"
      class="c1"
      href="#"
    >
      Test
    </a>
  </div>
</div>
`;

exports[`Anchor renders size specific theming 1`] = `
<DocumentFragment>
  .c18 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #000000;
  stroke: #000000;
}

.c18 g {
  fill: inherit;
  stroke: inherit;
}

.c18 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c18 *[stroke*="#"],
.c18 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c18 *[fill-rule],
.c18 *[FILL-RULE],
.c18 *[fill*="#"],
.c18 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c20 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #7D4CDB;
  stroke: #7D4CDB;
}

.c20 g {
  fill: inherit;
  stroke: inherit;
}

.c20 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c20 *[stroke*="#"],
.c20 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c20 *[fill-rule],
.c20 *[FILL-RULE],
.c20 *[fill*="#"],
.c20 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c19 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  width: 12px;
}

.c2 {
  box-sizing: border-box;
  font-size: 12px;
  line-height: 18px;
  color: #000000;
  font-weight: 700;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  cursor: pointer;
}

.c2:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c4 {
  box-sizing: border-box;
  font-size: 14px;
  line-height: 20px;
  color: #000000;
  font-weight: 700;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  cursor: pointer;
}

.c4:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c6 {
  box-sizing: border-box;
  font-size: 18px;
  line-height: 24px;
  color: #000000;
  font-weight: 700;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  cursor: pointer;
}

.c6:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c8 {
  box-sizing: border-box;
  font-size: 22px;
  line-height: 28px;
  color: #7D4CDB;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c8:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c10 {
  box-sizing: border-box;
  font-size: 26px;
  line-height: 32px;
  color: #7D4CDB;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c10:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c12 {
  box-sizing: border-box;
  font-size: 34px;
  line-height: 40px;
  color: #7D4CDB;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c12:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c15 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #000000;
  font-weight: 700;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  cursor: pointer;
}

.c15:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c16 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #000000;
  font-weight: 700;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c16:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c14 {
  font-size: 14px;
  line-height: 20px;
  max-width: 336px;
}

.c3 {
  font-size: 12px;
  line-height: 18px;
}

.c5 {
  font-size: 14px;
  line-height: 20px;
}

.c7 {
  font-size: 18px;
  line-height: 24px;
}

.c9 {
  font-size: 22px;
  line-height: 28px;
}

.c11 {
  font-size: 26px;
  line-height: 32px;
}

.c13 {
  font-size: 34px;
  line-height: 40px;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <a
        class="c2"
      >
        xsmall
      </a>
      <span
        class="c3"
      >
        Anchor should inherit 
        <a
          class="c2"
        >
          xsmall
        </a>
         from text.
      </span>
    </div>
    <div
      class="c1"
    >
      <a
        class="c4"
      >
        small
      </a>
      <span
        class="c5"
      >
        Anchor should inherit 
        <a
          class="c4"
        >
          small
        </a>
         from text.
      </span>
    </div>
    <div
      class="c1"
    >
      <a
        class="c6"
      >
        medium
      </a>
      <span
        class="c7"
      >
        Anchor should inherit 
        <a
          class="c6"
        >
          medium
        </a>
         from text.
      </span>
    </div>
    <div
      class="c1"
    >
      <a
        class="c8"
      >
        large
      </a>
      <span
        class="c9"
      >
        Anchor should inherit 
        <a
          class="c8"
        >
          large
        </a>
         from text.
      </span>
    </div>
    <div
      class="c1"
    >
      <a
        class="c10"
      >
        xlarge
      </a>
      <span
        class="c11"
      >
        Anchor should inherit 
        <a
          class="c10"
        >
          xlarge
        </a>
         from text.
      </span>
    </div>
    <div
      class="c1"
    >
      <a
        class="c12"
      >
        xxlarge
      </a>
      <span
        class="c13"
      >
        Anchor should inherit 
        <a
          class="c12"
        >
          xxlarge
        </a>
         from text.
      </span>
    </div>
    <p
      class="c14"
    >
      Anchor should inherit 
      <a
        class="c4"
      >
        small
      </a>
       from Paragraph.
    </p>
    <a
      class="c15"
    >
      Default anchor with no size prop should receive medium
    </a>
    <a
      class="c16"
    >
      <span
        class="c17"
        style="display: inline-flex;"
      >
        <svg
          aria-label="LinkNext"
          class="c18"
          viewBox="0 0 24 24"
        >
          <path
            d="M2 12h20m-9-9 9 9-9 9"
            fill="none"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
        <span
          class="c19"
        />
        Anchor with icon
      </span>
    </a>
    <a
      class="c8"
    >
      <span
        class="c17"
        style="display: inline-flex;"
      >
        <svg
          aria-label="LinkNext"
          class="c20"
          viewBox="0 0 24 24"
        >
          <path
            d="M2 12h20m-9-9 9 9-9 9"
            fill="none"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
        <span
          class="c19"
        />
        Large anchor with icon should receive color on icon
      </span>
    </a>
  </div>
</DocumentFragment>
`;

exports[`Anchor renders tag 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div>
  <div
    class="c0"
  >
    <span
      class="c1"
      href="#"
    >
      Test
    </span>
  </div>
</div>
`;

exports[`Anchor renders with children 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
  class="c0"
>
  <a
    class="c1"
    href="#"
  >
    children
  </a>
</div>
`;

exports[`Anchor reverse icon label renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c3 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  width: 12px;
}

.c1 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div>
  <div
    class="c0"
  >
    <a
      class="c1"
    >
      <span
        class="c2"
        style="display: inline-flex;"
      >
        Test
        <span
          class="c3"
        />
        <svg
          color="#7D4CDB"
        />
      </span>
    </a>
  </div>
</div>
`;

exports[`Anchor should have no accessibility violations 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div>
  <div
    class="c0"
  >
    <a
      class="c1"
    >
      Link
    </a>
  </div>
</div>
`;

exports[`Anchor shows no error for component used in as prop 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  cursor: pointer;
}

.c2 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c2:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
  class="c0"
>
  <div
    class="c1 c2"
    href="#"
    tabindex="0"
  />
</div>
`;

exports[`Anchor size renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  font-size: 12px;
  line-height: 18px;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 {
  box-sizing: border-box;
  font-size: 14px;
  line-height: 20px;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c2:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c3 {
  box-sizing: border-box;
  font-size: 18px;
  line-height: 24px;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c3:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c4 {
  box-sizing: border-box;
  font-size: 22px;
  line-height: 28px;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c4:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c5 {
  box-sizing: border-box;
  font-size: 26px;
  line-height: 32px;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c5:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c6 {
  box-sizing: border-box;
  font-size: 34px;
  line-height: 40px;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c6:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c7 {
  box-sizing: border-box;
  font-size: 10px;
  line-height: normal;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c7:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div>
  <div
    class="c0"
  >
    <a
      class="c1"
    />
    <a
      class="c2"
    />
    <a
      class="c3"
    />
    <a
      class="c4"
    />
    <a
      class="c5"
    />
    <a
      class="c6"
    />
    <a
      class="c7"
    />
  </div>
</div>
`;

exports[`Anchor warns about invalid icon render 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  padding: 12px;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
  class="c0"
>
  <a
    class="c1"
    href="#"
  >
    <svg
      color="#7D4CDB"
    />
  </a>
</div>
`;

exports[`Anchor warns about invalid label render 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
  class="c0"
>
  <a
    class="c1"
    href="#"
  >
    Test
  </a>
</div>
`;

exports[`Anchor weight renders 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c2:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c3 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c3:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c4 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: lighter;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c4:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c5 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: bolder;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c5:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c6 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c6:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c7 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: initial;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c7:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c8 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: revert;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c8:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c9 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: unset;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.c9:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div>
  <div
    class="c0"
  >
    <a
      class="c1"
      href="#"
    >
      Normal
    </a>
    <a
      class="c2"
      href="#"
    >
      Bold
    </a>
    <a
      class="c3"
      href="#"
    >
      Bold
    </a>
    <a
      class="c4"
      href="#"
    >
      Lighter
    </a>
    <a
      class="c5"
      href="#"
    >
      Bolder
    </a>
    <a
      class="c6"
      href="#"
    >
      Inherit
    </a>
    <a
      class="c7"
      href="#"
    >
      Initial
    </a>
    <a
      class="c8"
      href="#"
    >
      Revert
    </a>
    <a
      class="c9"
      href="#"
    >
      Unset
    </a>
  </div>
</div>
`;
